WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
14891
Decompilation of try block immediately following "else" fails
https://bugs.webkit.org/show_bug.cgi?id=14891
Summary
Decompilation of try block immediately following "else" fails
Oliver Hunt
Reported
2007-08-06 14:48:26 PDT
Decompilation of function(){if (y) {} else try {} finally {}} incorrectly deompiles to if (y) { } elsetry { } finally { } Notice the absence of whitespace between else and try.
Attachments
patch
(3.42 KB, patch)
2007-08-06 23:05 PDT
,
Sam Weinig
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2007-08-06 23:05:40 PDT
Created
attachment 15855
[details]
patch
Oliver Hunt
Comment 2
2007-08-06 23:09:01 PDT
Comment on
attachment 15855
[details]
patch r=め!
Sam Weinig
Comment 3
2007-08-06 23:17:26 PDT
<
rdar://problem/5391038
>
Adam Roben (:aroben)
Comment 4
2007-08-06 23:24:12 PDT
Comment on
attachment 15855
[details]
patch + (TryNode::streamTo): Add newline before else. Looks to me like you added a newline before "try"
Sam Weinig
Comment 5
2007-08-06 23:26:50 PDT
Landed in
r24904
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug