JavaScriptCore:

Reviewed by Oliver.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=14891
        Decompilation of try block immediately following "else" fails

        Test: fast/js/toString-try-else.html

        * kjs/nodes2string.cpp:
        (TryNode::streamTo): Add newline before else.

LayoutTests:

        Reviewed by Oliver.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14891
        Decompilation of try block immediately following "else" fails

        * fast/js/toString-try-else-expected.txt: Added.
        * fast/js/toString-try-else.html: Added.



Canonical link: https://commits.webkit.org/19474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24904 268f45cc-cd09-0410-ab3c-d52691b4dbfc